final commit spacing fix

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -21,7 +21,7 @@
     width: 75%;
     height: 80%;
     position: absolute;
-    bottom: 52%;
+    bottom: 55%;
     left: 50%;
     transform: translate(-50%, 50%);
     text-align: center;
